# ahiru_sample

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/pokemon/: usecases.py  views.py
app/templates/pokemon/: index.html
app/utils/: rest.py
manifests/: deployment.yaml
