[tool.poetry]
name = "fastapi-k8s"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"
packages = [{include = "fastapi_k8s"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
